# phasmophobia-stopwatch-timer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assets.qrc  colorpickerdialog.cpp  colorpickerdialog.h  colorpickerdialog.ui  gradientqlabel.cpp  gradientqlabel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qhotkeymanager.cpp  qhotkeymanager.h  qsettingsmanager.cpp  qsettingsmanager.h  stopwatchinteractiveeditor.cpp  stopwatchinteractiveeditor.h  stopwatchinteractiveeditor.ui  stopwatchmanager.cpp  stopwatchmanager.h  stylesheetgenerator.cpp  stylesheetgenerator.h  systemtimemodule.cpp  systemtimemodule.h  systemtimemodule.ui  uioeventloop.cpp  uioeventloop.h  uiohotkeymanager.cpp  uiohotkeymanager.h  uiokey.h  updatemanager.cpp  updatemanager.h  warmwelcome.cpp  warmwelcome.h  warmwelcome.ui
assets/: CrossPlatformStopwatch.desktop.in  appicon.rc  appicon.rc.in
